[package]
name = "cargo-license"
description = "Cargo subcommand to see license of dependencies"
authors = ["Onur Aslan <onur@onur.im>"]
version = "0.1.4"
license = "MIT"
readme = "README.md"
repository = "https://github.com/onur/cargo-license"

[dependencies]
cargo = "0.19"
error-chain = "0.10"
toml = "0.2"

[[bin]]
name = "cargo-unilicense"
path = "src/cargo-unilicense.rs"
