[package]
name = "cargo-license"
description = "Cargo subcommand to see license of dependencies"
authors = ["Onur Aslan <onur@onur.im>"]
version = "0.1.4"
license = "MIT"
readme = "README.md"
repository = "https://github.com/onur/cargo-license"

[dependencies]
cargo = "0.35.0"
error-chain = "0.12.0"
toml = "0.5.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
cargo_metadata = { git = "https://github.com/Thinkofname/cargo_metadata", branch = "unilicense" }
semver = "0.9.0"

[[bin]]
name = "cargo-unilicense"
path = "src/cargo-unilicense.rs"
